change css and add some items on the page

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
       <section class="computer">
         <div class="title">
           <h1>Computer</h1>
-          <button id="currentComputerPlayer"></button>
+          <button id="currentComputerPlayer">✌️</button>
         </div>
       </section>
 
       <section class="result">
-        <p id="results">Start Game</p>
+        <p id="results">currently draw</p>
       </section>
 
       <section class="computer">
         <div class="title">
           <h1>Player</h1>
-          <button id="currentPlayer"></button>
+          <button id="currentPlayer">✌️</button>
         </div>
       </section>
 
