added draw score on the page and changed some styings

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             </h1>
           </div>
           <div class="left">
+            <h1>Draw</h1>
+            <h1 id="drawPoints">0</h1>
             <h1>Computer</h1>
             <h1 id="computerPoints">0</h1>
             <h1 id="playersPoints">0</h1>
